--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout: home
-author_profile: true
-header:
-    image: "/assets/images/IMG_2309.jpeg"
+layout: splash
+permalink: /
+header: 
+    image: "/assets/images/IMG_3735.png"
 ---
+
